syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

// IF YOU CHANGE ANY OF THESE STRUCTURES BE SURE TO CHANGE InferenceNode struct in decentralized-api!!!
message HardwareNodes {
  repeated HardwareNode hardware_nodes = 1;
}

message HardwareNode {
  string participant = 1;
  string local_id = 2;
  HardwareNodeStatus status = 3;
  repeated Hardware hardware = 4;
}

enum HardwareNodeStatus {
  UNKNOWN = 0;
  INFERENCE = 1;
  POC = 2;
  TRAINING = 3;
}

message Hardware {
  string type = 1;
  uint32 count = 2;
}
